[project]
name = "markkit"
description = "Utility tool box for Markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic", "typer"]
dynamic = ["version"]

[dependency-groups]
dev = ["pytest", "zensical", "markdown-gfm-admonition"]

[project.scripts]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "7 days"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/markkit/_version.py"
template = '''
version = "{version}"
'''

[tool.isort]
force_single_line = true

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["D", "E", "F", "C90", "I"]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["markkit"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-single-line = true
combine-as-imports = true
from-first = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
preview = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
